--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,6 +30,8 @@ jobs:
 
       - name: Run tests with coverage
         run: pytest --cov --cov-report=xml
+        env:
+          DISCORD_TOKEN: test-token
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
