--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,22 @@ on:
 jobs:
   test:
     runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:16
+        env:
+          POSTGRES_USER: test_user
+          POSTGRES_PASSWORD: test_pass
+          POSTGRES_DB: ephemeral_vc_test
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd="pg_isready -U test_user -d ephemeral_vc_test"
+          --health-interval=10s
+          --health-timeout=5s
+          --health-retries=5
+
     steps:
       - uses: actions/checkout@v4
 
@@ -22,6 +38,16 @@ jobs:
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
 
+      - name: Lint YAML
+        run: |
+          pip install yamllint
+          yamllint -s .
+
+      - name: Lint TOML
+        run: |
+          pip install taplo
+          taplo check pyproject.toml
+
       - name: Lint with Ruff
         run: ruff check src tests
 
@@ -32,6 +58,9 @@ jobs:
         run: pytest --cov --cov-report=xml
         env:
           DISCORD_TOKEN: test-token
+          DATABASE_URL: postgresql+asyncpg://test_user:test_pass@localhost/ephemeral_vc_test
+          TEST_DATABASE_URL: postgresql+asyncpg://test_user:test_pass@localhost/ephemeral_vc_test
+          TEST_DATABASE_URL_SYNC: postgresql://test_user:test_pass@localhost/ephemeral_vc_test
 
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v4
