--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ dependencies = [
     "SQLAlchemy~=2.0.0",
     "alembic~=1.18.0",
     "pydantic-settings~=2.0",
-    "aiosqlite~=0.20.0",
     "asyncpg~=0.30.0",
     "greenlet~=3.0.0",
 ]
@@ -23,6 +22,7 @@ dev = [
     "dpytest~=0.7",
     "mypy~=1.8",
     "ruff~=0.14.0",
+    "faker~=37.0",
 ]
 
 [build-system]
@@ -68,12 +68,6 @@ asyncio_default_fixture_loop_scope = "function"
 source = ["src"]
 branch = true
 omit = [
-    "src/main.py",
-    "src/config.py",
-    "src/bot.py",
-    "src/cogs/*",
-    "src/ui/*",
-    "src/database/engine.py",
     "*/migrations/*",
 ]
 
