Add tests and checks

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,6 +28,12 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Set up Node.js with Volta
+        uses: volta-cli/action@v4
+
+      - name: Install Node.js dependencies
+        run: npm ci
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
@@ -37,6 +43,12 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -e ".[dev]"
+
+      - name: Spell check with cspell
+        run: npm run lint:spell
+
+      - name: Lint JSON
+        run: npm run lint:json
 
       - name: Lint YAML
         run: |
