--- a/.gitignore
+++ b/.gitignore
@@ -187,6 +187,12 @@ cython_debug/
 .ruff_cache/
 
 # =========================
+# Node.js
+# =========================
+
+node_modules/
+
+# =========================
 # Docker
 # =========================
 
