--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "itsdangerous~=2.2.0",
     "bcrypt~=4.2.0",
     "psycopg2-binary~=2.9.0",
+    "emoji~=2.14.0",
 ]
 
 [project.optional-dependencies]
