--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,13 +5,14 @@
 # このワークフローは、コードの品質を自動的にチェックする。
 # push 時に実行され、以下の検証を行う:
 #
-# 1. スペルチェック (cspell)
-# 2. JSON/YAML/TOML の構文チェック
-# 3. Python コードのフォーマットチェック (Ruff format)
-# 4. Python コードの静的解析 (Ruff check)
-# 5. 型チェック (mypy)
-# 6. ユニットテスト (pytest)
-# 7. カバレッジレポート (Codecov)
+# 1. requirements.txt 同期チェック
+# 2. スペルチェック (cspell)
+# 3. JSON/YAML/TOML の構文チェック
+# 4. Python コードのフォーマットチェック (Ruff format)
+# 5. Python コードの静的解析 (Ruff check)
+# 6. 型チェック (mypy)
+# 7. ユニットテスト (pytest)
+# 8. カバレッジレポート (Codecov)
 #
 # 注意:
 # - ローカルからの手動デプロイは禁止 (バージョン齟齬・テスト見逃し防止)
@@ -104,7 +105,15 @@ jobs:
           pip install -e ".[dev]"
 
       # -----------------------------------------------------------------------
-      # 6. スペルチェック (cspell)
+      # 6. requirements.txt 同期チェック
+      # -----------------------------------------------------------------------
+      # requirements.txt が pyproject.toml と同期しているかチェック
+      # Heroku は requirements.txt を使用するため、同期が必須
+      - name: Check requirements.txt sync
+        run: python scripts/sync_requirements.py --check
+
+      # -----------------------------------------------------------------------
+      # 7. スペルチェック (cspell)
       # -----------------------------------------------------------------------
       # コード内の英単語のスペルミスをチェック
       # 設定ファイル: cspell.json
@@ -112,14 +121,14 @@ jobs:
         run: npm run lint:spell
 
       # -----------------------------------------------------------------------
-      # 7. JSON 構文チェック
+      # 8. JSON 構文チェック
       # -----------------------------------------------------------------------
       # JSON ファイルの構文エラーをチェック
       - name: Lint JSON
         run: npm run lint:json
 
       # -----------------------------------------------------------------------
-      # 8. YAML 構文チェック (yamllint)
+      # 9. YAML 構文チェック (yamllint)
       # -----------------------------------------------------------------------
       # YAML ファイルの構文・スタイルをチェック
       # -s: 厳格モード (警告もエラーとして扱う)
@@ -129,7 +138,7 @@ jobs:
           yamllint -s .
 
       # -----------------------------------------------------------------------
-      # 9. TOML 構文チェック (taplo)
+      # 10. TOML 構文チェック (taplo)
       # -----------------------------------------------------------------------
       # pyproject.toml の構文をチェック
       - name: Lint TOML
@@ -138,7 +147,7 @@ jobs:
           taplo check pyproject.toml
 
       # -----------------------------------------------------------------------
-      # 10. Python フォーマットチェック (Ruff format)
+      # 11. Python フォーマットチェック (Ruff format)
       # -----------------------------------------------------------------------
       # コードが Ruff のフォーマット規則に従っているかチェック
       # --check: 実際にフォーマットせず、差分があればエラー
@@ -146,7 +155,7 @@ jobs:
         run: ruff format --check .
 
       # -----------------------------------------------------------------------
-      # 11. Python 静的解析 (Ruff check)
+      # 12. Python 静的解析 (Ruff check)
       # -----------------------------------------------------------------------
       # コードの問題 (未使用インポート、スタイル違反など) を検出
       # 設定ファイル: pyproject.toml の [tool.ruff] セクション
@@ -154,7 +163,7 @@ jobs:
         run: ruff check src tests
 
       # -----------------------------------------------------------------------
-      # 12. 型チェック (mypy)
+      # 13. 型チェック (mypy)
       # -----------------------------------------------------------------------
       # Python の型アノテーションの整合性をチェック
       # 設定ファイル: pyproject.toml の [tool.mypy] セクション
@@ -162,7 +171,7 @@ jobs:
         run: mypy src
 
       # -----------------------------------------------------------------------
-      # 13. ユニットテスト (pytest)
+      # 14. ユニットテスト (pytest)
       # -----------------------------------------------------------------------
       # テストを実行し、カバレッジレポートを生成
       # --cov: カバレッジ計測を有効化
@@ -179,7 +188,7 @@ jobs:
           TEST_DATABASE_URL_SYNC: postgresql://test_user:test_pass@localhost/discord_util_bot_test
 
       # -----------------------------------------------------------------------
-      # 14. カバレッジレポートのアップロード (Codecov)
+      # 15. カバレッジレポートのアップロード (Codecov)
       # -----------------------------------------------------------------------
       # テストカバレッジを Codecov にアップロードし、可視化する
       # PRにカバレッジの変化がコメントされる
