--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "bcrypt~=4.2.0",
     "psycopg2-binary~=2.9.0",
     "emoji~=2.14.0",
+    "httpx~=0.28.0",
 ]
 
 [project.optional-dependencies]
