--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,21 +30,18 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: "3.12"
+          cache: pip
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -e ".[dev]"
+          pip install -e ".[dev]" yamllint taplo
 
       - name: Lint YAML
-        run: |
-          pip install yamllint
-          yamllint -s .
+        run: yamllint -s .
 
       - name: Lint TOML
-        run: |
-          pip install taplo
-          taplo check pyproject.toml
+        run: taplo check pyproject.toml
 
       - name: Lint with Ruff
         run: ruff check src tests
@@ -53,7 +50,7 @@ jobs:
         run: mypy src
 
       - name: Run tests
-        run: pytest --cov
+        run: pytest -n auto --cov
         env:
           DISCORD_TOKEN: test-token
           DATABASE_URL: postgresql+asyncpg://test_user:test_pass@localhost/discord_util_bot_test
